<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>laser_rahcm_simulation</name>
  <version>0.0.1</version>
  <description>Chico Mendes Robot Simulation</description>
  <maintainer email="gabriellucenasajr@gmail.com">gabriel</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend> 
  <depend>std_msgs</depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>

  <depend>ament_cmake</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
